# AMClaw

./: .ci-verification.md  .env.deepseek  .env.deepseek.example  .env.moonshot  .env.moonshot.example  .gitignore  AGENT-RUNTIME-01-REACT-FOUNDATION-2026-04-10.md  AGENT-RUNTIME-02-PLAN-EXECUTE-FAILURE-MODEL-2026-04-10.md  AGENT-RUNTIME-04-PARADIGM-EVOLUTION-2026-04-11.md  AGENT-RUNTIME-IMPLEMENTATION-PLAN.md  AGENTS.md  AMCLAW-FEATURE-ROADMAP.md  CLAUDE.md  CORE-SKILL-ROADMAP.md  Cargo.toml  DESIGN-0.1.0.md  DEVELOPMENT.md  LOGGING.md  Makefile  NEXT-STEPS.md  PLAN-EXECUTE-NOTES-2026-04-10.md  PLAN.md  REACT-RUNTIME-NOTES-2026-04-10.md  README.md  SPRINT-RETRO-2026-04-11.md
.github/workflows/: nightly-tests.yml  trace-eval-compare.yml
docs/: README.md
docs/roadmap/: AMCLAW-FEATURE-ROADMAP.md
notes/: README.md  review-2026-05-20.md
notes/agent-eval/: README.md
notes/archive/: README.md
plans/: S18-1-CI-SHELLCHECK-STRATEGY-2026-05-08.md
scripts/: eval_gate.sh  trace_compare.sh  trace_soft_gate.sh
sessions/: README.md  SESSION-2026-04-12-v2.md  SESSION-2026-04-12.md  SESSION-2026-04-13.md  SESSION-2026-04-14.md  SESSION-2026-04-15.md  SESSION-2026-04-16.md  SESSION-2026-04-17.md  SESSION-2026-04-18.md  SESSION-2026-04-19.md  SESSION-2026-04-20.md  SESSION-2026-04-21.md  SESSION-2026-05-05.md  SESSION-2026-05-06.md  SESSION-2026-05-07.md  SESSION-2026-05-08.md  SESSION-TEMPLATE.md
src/: config.rs  context_pack.rs  lib.rs  logging.rs  main.rs  session_router.rs  session_summary.rs
tests/: doc_mirrors.rs  scope_markers.rs
tools/: mlx_embedding_server.py
(+136 files in other folders)
