[package]
name = "AMClaw"
version = "0.3.2"
edition = "2021"

[lib]
name = "amclaw"
path = "src/lib.rs"

[[bin]]
name = "amclaw"
path = "src/main.rs"

[[bin]]
name = "context_eval"
path = "src/bin/context_eval.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
ctrlc = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
